--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,10 @@ body {
   margin: 0;
 
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
