--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
+@import "@fontsource/poppins/300.css";
+@import "@fontsource/poppins/400.css";
+@import "@fontsource/poppins/500.css";
+@import "@fontsource/poppins/600.css";
+@import "@fontsource/poppins/700.css";
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+ font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,9 +19,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  margin: 0;
-
+body,
+/* .ant-typography,
+.ant-btn, */
+.ant-input,
+.ant-select-selector,
+.ant-menu {
+   font-family: 'Poppins', sans-serif !important;
+   margin: 0;
+   overflow-x: hidden !important;
 }
 .no-scrollbar::-webkit-scrollbar {
   display: none;
